--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ body{font-family: 'Open Sans', sans-serif; color: #2A292D;}
 .container{width: 80%; margin: 0 auto; max-width: 900px;}
 .container div{float:left;}
 .container .grid_2{width: 60%; padding: 15px 6% 15px 0;}
-.container .grid_1{width: 30%; padding: 0 2%;}
+.container .grid_1{width: 29%; padding: 0 2%; text-align: center;}
 
 .container .imgholder{position: relative; height: 275px;}
 .container .imgholder img{width: 100%; position: absolute; bottom: 0; right: 0;}
@@ -117,7 +117,15 @@ body{font-family: 'Open Sans', sans-serif; color: #2A292D;}
 
 
 
+@media only screen and (max-width: 860px) {
+    .container .grid_1{width: 100%;}
+    .container .grid_2 {width: 100%;}
+    .container .imgholder img{width: 45%; min-width: 250px;}
+}
 
+@media only screen and (max-width: 450px){
+    .container .imgholder{height: 200px;}
+}
 
 
 /* ==========================================================================
@@ -227,9 +235,6 @@ body{font-family: 'Open Sans', sans-serif; color: #2A292D;}
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
 
 @media print,
        (-o-min-device-pixel-ratio: 5/4),
