--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ body{font-family: 'Open Sans', sans-serif; color: #2A292D;}
 
 .container{width: 80%; margin: 0 auto; max-width: 900px;}
 .container div{float:left;}
-.container .grid_3{width: 100%;}
+.container .grid_3{width: 100%; padding: 15px; border: none;}
 .container .grid_2{width: 60%; padding: 15px 6% 15px 0;}
 .container .grid_1{width: 29%; padding: 0 2%; text-align: center;}
 
